Minor style improvements

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,6 +24,7 @@ h5,
 h6 {
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 600;
+  line-height: 1.25;
 }
 
 a {
@@ -62,7 +63,7 @@ a {
 }
 
 .hero h1 {
-  font-size: 26px;
+  font-size: 28px;
   margin: 0;
 }
 
@@ -110,6 +111,7 @@ a {
 .contact form textarea {
   display: block;
   width: 100%;
+  margin-top: 5px;
   padding: 10px;
   margin-bottom: 10px;
   border: 1px solid #ccc;
@@ -131,6 +133,7 @@ a {
   color: #fff;
   font-size: 16px;
   line-height: 1.5;
+  font-weight: 600;
   cursor: pointer;
 }
 
